--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-Django==5.0.7
+asgiref==3.8.1
+Django==5.1.3       
+python-dotenv==1.0.1
+sqlparse==0.5.2     
+tzdata==2024.2      
+whitenoise==6.8.2
